docs/tests/typing/bad/testfile-this-1.cpp
void f() { std::cout << this << "\n"; }
int main() {}

